--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_1_intro.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_1_intro.ipynb
@@ -194,12 +194,56 @@
    "source": [
     "## Mes premiers pas avec l'interpréteur interactif\n",
     "\n",
-    "Vous pouvez commencer à essayer d'exécuter et modifier les commandes ci-dessous, directement dans les cellules de code de ce notebook. Vous pouvez aussi le tenter dans un terminal de votre machine locale, après avoir lancé l'interpréteur python à l'aide de la commande `python`."
+    "Vous pouvez commencer à essayer d'exécuter et modifier les commandes ci-dessous, directement dans les cellules de code de ce notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World !'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Hello World !\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -213,34 +257,12 @@
     }
    ],
    "source": [
-    "print(\"Hello World !\")\n"
+    "print(\"Hello\",\"World\",\"!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "internals": {
@@ -292,6 +314,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Les commandes que vous tapez dans les cellules de ce notebook sont en réalité transmises à un interpréteur. Pour utilisez directement l'interpréteur, ouvrez un terminal, tapez `python`, et essayez à nouveau ces mêmes commandes. Pour quitter l'interpréteur, tapez `quit()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Mes premières variables\n",
     "\n",
     "Les noms de variables sont faits de **lettres**, de **chiffres**, et de soulignés \"**_**\". Par convention, les variables automatiquement définies par le système ont un nom qui commence et se termine par un double souligné  \"**__**\". Python fait la différence entre minuscules et majuscules dans les noms de variables.   Depuis Python 3, les caractères non-ascii sont autorisés dans les noms de variables, puisqu'il travaille en unicode… mais à éviter pour le moment !!\n",
@@ -300,27 +329,16 @@
     "\n",
     "L'affectation d'une valeur à une variable se fait à l'aide de l'opérateur égal \"**=**\". La comparaison de deux valeurs se fait à l'aide du double-égal \"**==**\".\n",
     "\n",
-    "On peut voir le contenu d'une variable en donnant son nom à l'interpréteur python, ou par un appel à la fonction `print()`. Dans un fichier, la seule façon de faire afficher la valeur d'une variable est un appel à `print()`."
+    "On peut voir le contenu d'une variable en donnant son nom à l'interpréteur python, comme pour toute expression, ou par un appel à la fonction `print()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello World !'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = \"Hello World !\"\n",
     "x"
@@ -328,19 +346,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = 3.14\n",
     "print(y)"
@@ -355,39 +365,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b, c = 1, 2, \"hello\"\n",
     "print(a,b,c)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut même très facilement échanger deux variables :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.14 Hello World !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x, y = y, x\n",
     "print(x,y)"
@@ -402,23 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'float' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-f6b1ff77d955>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x+y"
    ]
@@ -428,6 +417,27 @@
    "metadata": {},
    "source": [
     "Est-ce nécessaire de préciser qu'il est déconseillé de réutiliser une variable à toutes les sauces, en lui attributant au fil de l'exécution des valeurs sans rapport les unes avec les autres ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mon premier fichier\n",
+    "\n",
+    "L'interpréteur est un moyen pratique de tester quelques commandes très simples, mais dès que les instructions sont nombreuses et qu'elles vont être répétées, il est plus efficace de les placer dans un fichier.\n",
+    "\n",
+    "Copier les instructions suivantes au sein d'un fichier `mon_fichier.py` :\n",
+    "\n",
+    "```python\n",
+    "\"Hello World !\"\n",
+    "1+1\n",
+    "print(\"Hello\",\"World\",\"!\")\n",
+    "```\n",
+    "\n",
+    "Exécutez le avec la commande `python mon_fichier.py`. Que remarquez vous ?\n",
+    "\n",
+    "Dans un fichier, la seule façon de faire afficher la valeur d'une variable est un appel à `print()`."
    ]
   },
   {
@@ -467,20 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if a > 1 and b > 5 \\\n",
     "        and c < 3:\n",
@@ -612,30 +613,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.6666666666666666, 0.0)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def divs(x,y):\n",
-    "  'Essaie / et //.'\n",
-    "  res1 = x/y\n",
-    "  res2 = x//y\n",
-    "  return res1, res2\n",
+    "  if y!=0:\n",
+    "    print(x,'/',y,':',x/y)\n",
+    "    print(x,'//',y,':',x//y)\n",
+    "    return True\n",
+    "  else:\n",
+    "    return False\n",
     "\n",
-    "divs(2.,3.)"
+    "if not divs(2,3):\n",
+    "  print('ERROR')\n",
+    "if not divs(2.,3.):\n",
+    "  print('ERROR')\n",
+    "if not divs(1,0):\n",
+    "  print('ERROR')\n",
+    "if not divs('a','b'):\n",
+    "  print('ERROR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On notera que Python n'impose pas le type des paramètres `x` et `y` de la fonction. Du moment que les valeurs données en arguments sont dotées d'un opérateur `/`, `//`, et que `y` est comparable à `0`, un appel se déroule sans problème. Pour autant, si les opérations appliquées ne sont pas valides pour les valeurs utilisées, comme dans l'appel `divs('a','b')`, Python détecte l'erreur et la signale. C'est le typage \"canard\"."
    ]
   },
   {
@@ -669,19 +676,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "82\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "rand_number = random.randint(1, 100)\n",
@@ -716,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Mise en page et structures de contrôle](synope_fonctions_2_controle.ipynb)"
+    "[Types prédéfinis](synope_fonctions_2_types.ipynb)"
    ]
   },
   {
@@ -751,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -773,7 +772,7 @@
        "div.text_cell_render{\n",
        "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
        "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
+       "    font-size: 140%;\n",
        "    width:100%;/*600px;*/\n",
        "    /*margin-left:auto;*/\n",
        "    /*margin-right:auto;*/\n",
@@ -815,7 +814,7 @@
        "    border-radius: 25px;\n",
        "    font-style: italic;\n",
        "    height:5%;\n",
-       "    width:15%;\n",
+       "    width:20%;\n",
        "    padding:5px;\n",
        "    text-align: center;\n",
        "}\n",
@@ -844,16 +843,28 @@
        "    border-radius: 10px;\n",
        "}\n",
        "\n",
-       "/*.reveal h1 {\n",
+       ".reveal h1 {\n",
+       "    font-size: 70px;\n",
        "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
+       "}\n",
+       "\n",
+       ".reveal h2 {\n",
+       "    font-size: 50px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h3 {\n",
+       "    font-size: 50px;\n",
+       "    \n",
+       "}\n",
+       "\n",
        "</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
