--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_controle.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_controle.ipynb
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Variables et types prédéfinis](synope_fonctions_3_variables.ipynb)"
+    "[Entrées/sorties](synope_fonctions_4_entrees_sorties.ipynb)"
    ]
   },
   {
