--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_5_fonctions.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_5_fonctions.ipynb
@@ -271,27 +271,77 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "## Passage de paramètres par adresse, par valeur\n",
+    "Pour initialiser ses arguments, Python réalise une affectation, et les variables représentant ces arguments pointent donc sur les valeurs qu'on lui a passé lors de l'appel, ou vers les valeurs pointées par les variables qu'on lui a passé lors de l'appel. **Il n'y a pas duplication des valeurs**.\n",
     "\n",
-    "Python passe les variables par adresse.\n"
+    "Si on réalise une nouvelle affectation à cet argument dans le corps de la fonction, l'ancienne valeur n'est pas affectée. Et les éventuelles variables extérieures qui pointaient cette valeur ne voient pas de modification."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=10, b=toto\n",
+      "10 => 5, \"toto\" => \"tata\"\n",
+      "a=10, b=toto\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maFonction(a, b):\n",
+    "    print(\"{} => 5, \\\"{}\\\" => \\\"tata\\\"\".format(a, b))\n",
+    "    a = 5\n",
+    "    b = \"tata\"\n",
+    "\n",
+    "a = 10\n",
+    "b = \"toto\"\n",
+    "print(\"a={}, b={}\".format(a, b))\n",
+    "maFonction(a, b)\n",
+    "print(\"a={}, b={}\".format(a, b))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Par contre, si on réalise une modification interne de la valeur pointée, comme changer un élément d'une collection modifiable, alors les variables extérieures qui pointaient cette collection voient le changement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a= 10 , b= toto\n",
+      "10 => 5, \"toto\" => \"tata\"\n",
+      "a= 5 , b= tata\n"
+     ]
+    }
+   ],
    "source": [
     "def maFonction(a, b):\n",
     "    print(\"{0} => 5, \\\"{1}\\\" => \\\"tata\\\"\".format(a[0], \"\".join(b)))\n",
@@ -314,60 +364,29 @@
     }
    },
    "source": [
-    "## Passage de paramètres par adresse, par valeur\n",
-    "\n",
-    "Python passe les variables par adresse.<br/>\n",
-    "Cependant, les types scalaires de Python entier, flottant et chaine sont *immutables*."
+    "Pour communiquer les changements au programme principal, on peut aussi retourner la ou les valeurs transformée(s)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": [
-    "def maFonction(a, b):\n",
-    "    print(\"{} => 5, \\\"{}\\\" => \\\"tata\\\"\".format(a, b))\n",
-    "    a = 5\n",
-    "    b = \"tata\"\n",
-    "\n",
-    "a = 10\n",
-    "b = \"toto\"\n",
-    "print(\"a={}, b={}\".format(a, b))\n",
-    "maFonction(a, b)\n",
-    "print(\"a={}, b={}\".format(a, b))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=10, b=toto\n",
+      "10 => 5, \"toto\" => \"tata\"\n",
+      "a=5, b=tata\n"
+     ]
     }
-   },
-   "source": [
-    "## Passage de paramètres par adresse, par valeur\n",
-    "\n",
-    "Python passe les variables par adresse.<br/>\n",
-    "Cependant, les types scalaires de Python entier, flottant et chaine sont *immutables*.<br/>\n",
-    "Pour communiquer les changements au programme principal, on peut retourner la ou les valeurs transformée(s)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
+   ],
    "source": [
     "def maFonction(a, b):\n",
     "    print(\"{0} => 5, \\\"{1}\\\" => \\\"tata\\\"\".format(a, b))\n",
@@ -476,6 +495,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour récapituler :\n",
+    "* en cas d'accès en lecture, une variable est recherchée selon la règle LEGB : dans la fonction Locale, puis dans les fonctions Englobantes, puis au niveau Global, et enfin dans le module Builtin ou réside les variables prédéfinis.\n",
+    "* en cas d'affectation à une variable, une varibale locale est créé dans la fonction courante, à moins qu'une instruction préalable `global` est indiqué qu'on voulait modifier la variable globale de même nom.\n",
+    "* en cas de modification interne, on recherche d'abord la variable selon la règle LEGB, puis on modife son ou ses éléments internes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -489,14 +518,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5 6\n",
+      "1 2 6\n",
+      "1 2 3\n"
+     ]
+    }
+   ],
    "source": [
     "def maFonction(a, b = 5, c = 6):\n",
     "    print(a, b, c)\n",
@@ -516,19 +555,27 @@
    "source": [
     "## Appel d'une fonction avec les arguments \"nommés\"\n",
     "\n",
-    "Pour plus de lisibilité, il est également possible de nommer les arguments d'une fonction."
+    "Pour plus de lisibilité, il est également possible de nommer les arguments lors d'un appel de fonction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b c a\n"
+     ]
+    }
+   ],
    "source": [
     "def maFonction(a, b, c):\n",
     "    print(a, b, c)\n",
@@ -610,6 +657,38 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y compris pour une fonction à nombre fixe d'arguments. On parle alors d' \"unpacking\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'b', 'c')\n",
+      "a b c\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maFonction(a, b, c):\n",
+    "    print(a, b, c)\n",
+    "\n",
+    "args = 'a', 'b', 'c'\n",
+    "print(args)\n",
+    "maFonction(*args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -621,14 +700,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': '6', 'a': 5}\n",
+      "b:6\n",
+      "a:5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def unNouveauNomDeFonction(**arguments):\n",
     "    print(arguments)\n",
@@ -647,19 +737,30 @@
     }
    },
    "source": [
-    " Il est possible de passer une collection."
+    " Il est possible de passer un dictionnaire (unpacking)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': 16, 'a': 9}\n",
+      "b:16\n",
+      "a:9\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "unNouveauNomDeFonction(**{\"a\": 9, \"b\": 16})"
    ]
