--- a/python/session-2016-03-idf/2_modules/ellipsoides/enonce/synope_session_2016_03_idf-TP2.ipynb
+++ b/python/session-2016-03-idf/2_modules/ellipsoides/enonce/synope_session_2016_03_idf-TP2.ipynb
@@ -19,94 +19,124 @@
     }
    },
    "source": [
-    "# Initiation à Python - TP 2 - packages et modules"
+    "# Ellipsoides - paquets et modules"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vous allez créer ici votre premier package Python qui intègrera les fonctions réalisées lors du premier TP. Nous choisirons l'arborescence suivante\n",
+    "## Modules\n",
     "\n",
-    "<img src=\"figures/synope_tree.png\" />\n",
+    "Créez les deux fichiers ci-dessous\n",
+    "- *demo_superellipsoid.py*\n",
+    "~~~python\n",
+    "import superellipse as se2d\n",
+    "import superellipsoid as se3d\n",
+    "print(se2d.superellipse(10, 1, 1, 2))\n",
+    "print(se3d.superellipsoid(10, 1, 1, 1, 2, 2))~~~\n",
+    "- *demo_quaternion.py*\n",
+    "~~~python\n",
+    "import quaternion\n",
+    "import math\n",
+    "print(quaternion.rotate_using_complex(math.pi/4, [1, 0]))  \n",
+    "print(quaternion.rotate_using_quaternion(math.pi/4, [0, 0, 1], [1, 0, 0]))\n",
+    "~~~\n",
     "\n",
-    "#### Quetion 1\n",
+    "***\n",
+    "#### Question 1\n",
+    "Distribuez dans des fichiers *linspace.py*, *quaternion.py*, *superellipse.py*, *superellipsoid.py* et *utils.py* les fonctions crées dans les pratiques précédentes. Le fichier *utils.py* contiendra les fonctions $spe\\_cos$ et $spe\\_sin$. Faites en sorte que les programmes de démonstration ci-dessus s'exécutent correctement.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Paquets\n",
     "\n",
-    "Commencez par créer cette arborescence en mettant dans les fichiers *linspace.py*, *quaternion.py*, *superellipse.py*, *superellipsoid.py* et *utils.py* les fonctions crées lors de la première séance. Le fichier *utils.py* contiendra les fonctions $spe\\_cos$ et $spe\\_sin$.\n",
+    "Modifiez les deux fichiers de démonstration :\n",
+    "- *demo_superellipsoid.py*\n",
+    "~~~python\n",
+    "import pySynope.superellipse as se2d\n",
+    "import pySynope.superellipsoid as se3d\n",
+    "print(se2d.superellipse(10, 1, 1, 2))\n",
+    "print(se3d.superellipsoid(10, 1, 1, 1, 2, 2))~~~\n",
+    "- *demo_quaternion.py*\n",
+    "~~~python\n",
+    "import pySynope.quaternion\n",
+    "import math\n",
+    "print(pySynope.quaternion.rotate_using_complex(math.pi/4, [1, 0]))  \n",
+    "print(pySynope.quaternion.rotate_using_quaternion(math.pi/4, [0, 0, 1], [1, 0, 0]))\n",
+    "~~~\n",
     "\n",
-    "#### Quetion 2\n",
+    "***\n",
+    "#### Question 2\n",
+    "Déplacez les fichiers appropriés dans un sous-répertoire *pySynope* afin que les démonstrations fonctionnent de nouveau.\n",
+    "***\n",
     "\n",
-    "Ajoutez les fichiers *\\_\\_init\\_\\_.py* en les laissant vides pour le moment et écrivez le fichier *setup.py* permettant d'installer *pySynope*.\n",
+    "***\n",
+    "#### Question 3\n",
+    "Déplacez les fichiers *superellipse.py*, *superellipsoid.py* dans un sous-répertoire *pySynope/ellipsoides*. Corrigez les fichiers appropriés et les démonstrations pour qu'elles fonctionnent de nouveau.\n",
+    "***\n",
     "\n",
-    "Le *setup* devra contenir au moins les champs:\n",
+    "Modifiez encore les deux fichiers de démonstration :\n",
+    "- *demo_superellipsoid.py*\n",
+    "~~~python\n",
+    "import pySynope\n",
+    "print(pySynope.superellipse(10, 1, 1, 2))\n",
+    "print(pySynope.superellipsoid(10, 1, 1, 1, 2, 2))~~~\n",
+    "- *demo_quaternion.py*\n",
+    "~~~python\n",
+    "import pySynope\n",
+    "import math\n",
+    "print(pySynope.rotate_using_complex(math.pi/4, [1, 0]))  \n",
+    "print(pySynope.rotate_using_quaternion(math.pi/4, [0, 0, 1], [1, 0, 0]))\n",
+    "~~~\n",
     "\n",
+    "***\n",
+    "#### Question 4\n",
+    "Modifiez les fichiers *__init__.py* afin que les démonstrations fonctionnent de nouveau.\n",
+    "***\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribution\n",
+    "\n",
+    "Ecrivez le fichier *setup.py* permettant d'installer *pySynope*. Il devra contenir au moins les champs:\n",
     "- name,\n",
     "- version,\n",
     "- author,\n",
     "- description,\n",
     "- packages.\n",
     "\n",
-    "#### Question 3\n",
+    "***\n",
+    "#### Question 5\n",
+    "Installez le package *pySynope*, déplacez les fichiers de démonstration dans un sous-répertoire *demos*, et vérifiez qu'ils fonctionnent toujours.\n",
+    "***\n",
     "\n",
-    "Installez le package *pySynope*\n",
+    "Au final, vos répertoires et vos fichiers devraient être proches de ceci :\n",
     "\n",
-    "#### Question 4\n",
-    "\n",
-    "Créez le répertoire *demos* et mettez les deux scripts Python suivant\n",
-    "\n",
-    "- *superellipsoid.py*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "import pySynope\n",
-    "\n",
-    "print(pySynope.superellipse(10, 1, 1, 2))\n",
-    "print(pySynope.superellipsoid(10, 1, 1, 1, 2, 2))"
+    "<img src=\"figures/synope_tree.png\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- *quaternion.py*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "import pySynope\n",
-    "import math\n",
-    "\n",
-    "print(pySynope.rotate_using_complex(math.pi/4, [1, 0]))  \n",
-    "print(pySynope.rotate_using_quaternion(math.pi/4, [0, 0, 1], [1, 0, 0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testez ces scripts, puis modifiez les fichiers *\\_\\_init\\_\\_.py* pour que ces deux exemples fonctionnent."
+    "### Mise en forme du notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -126,7 +156,7 @@
        "div.text_cell_render{\n",
        "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
        "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
+       "    font-size: 140%;\n",
        "    width:100%;/*600px;*/\n",
        "    /*margin-left:auto;*/\n",
        "    /*margin-right:auto;*/\n",
@@ -168,7 +198,7 @@
        "    border-radius: 25px;\n",
        "    font-style: italic;\n",
        "    height:5%;\n",
-       "    width:15%;\n",
+       "    width:20%;\n",
        "    padding:5px;\n",
        "    text-align: center;\n",
        "}\n",
@@ -197,9 +227,21 @@
        "    border-radius: 10px;\n",
        "}\n",
        "\n",
-       "/*.reveal h1 {\n",
+       ".reveal h1 {\n",
+       "    font-size: 70px;\n",
        "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
+       "}\n",
+       "\n",
+       ".reveal h2 {\n",
+       "    font-size: 50px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h3 {\n",
+       "    font-size: 50px;\n",
+       "    \n",
+       "}\n",
+       "\n",
        "</style>"
       ],
       "text/plain": [
@@ -237,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
