--- a/python/session-2016-03-idf/2_modules/theorie/synope_modules_1_modules.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/synope_modules_1_modules.ipynb
@@ -108,7 +108,10 @@
     "- Elles sont exécutées seulement lors du premier *import* du module (pour forcer le rechargement, il faut utiliser *reload()*)\n",
     "- Chaque module possède son propre espace de nommage (ou table de nommage) «privé» qui est global pour toutes les fonctions de ce même module. Les variables sont accessibles via la notation «nommodule.nomvariable» (comme pour une fonction)\n",
     "- Un module peut importer d’autres modules. Par convention, on place tous les imports au début du module.\n",
-    "- L’instruction «import» crée un objet de type module contenant toutes les données et fonctions du module, et ajoute une variable désignant ce module au sein de l’espace de nommage du programme/module/interpéteur qui fait l’import. Il existe une variante qui permet d’importer directement dans la table de nommage un ou des éléments particuliers du module : **from module import nom**\n",
+    "- L’instruction «import» crée un objet de type module contenant toutes les données et fonctions du module, et ajoute une variable désignant ce module au sein de l’espace de nommage du programme/module/interpéteur qui fait l’import. Il existe une variante qui permet d’importer directement dans la table de nommage un ou des éléments particuliers du module :\n",
+    "```python\n",
+    "from module import nom\n",
+    "```\n",
     "- Par exemple :\n",
     "```shell\n",
     ">>> from fibo import fib, fib2\n",
@@ -116,7 +119,7 @@
     "1 1 2 3 5 8 13 21 34 55 89 144 233 377\n",
     "```\n",
     "_Dans cet exemple, fib et fib2 sont ajoutés dans la table de nommage locale. Fibo n’est pas défini.\n",
-    "On peut aussi utiliser le symbole \\* qui va importer toute la table de nommage sauf ceux qui contiennent un tiret-bas_ *(underscore : _ )*"
+    "On peut aussi utiliser le symbole \\* qui va importer toute la table de nommage sauf ceux dont le nom commence par un tiret-bas_ *(underscore : _ )*"
    ]
   },
   {
@@ -472,7 +475,7 @@
    "source": [
     "## A suivre...\n",
     "\n",
-    "[Travaux pratiques](../ellipsoides/enonce/synope_modules_tp.ipynb)\n",
+    "[Travaux pratiques](../ellipsoides/enonce/synope_modules_tp.ipynb)  \n",
     "[Paquets](synope_modules_2_paquets.ipynb)"
    ]
   },
