--- a/python/session-2016-03-idf/2_modules/theorie/synope_modules_3_distribution.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/synope_modules_3_distribution.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "* Voici une liste non exhaustive d’arguments de la fonction **setup**\n",
     "    - le nom du projet : nom=\"sample\"\n",
-    "    - la version : version=\"1.2.0\" (voir PEP440)\n",
+    "    - la version : version=\"1.2.0\" (voir [PEP 440](https://www.python.org/dev/peps/pep-0440/))\n",
     "    - les packages à inclure dans le projet. On peut les lister ou utiliser `find_packages` pour automatiser cette tâche (`exclude` pour pour exlure ceux qui ne doivent pas être installés) : `py_modules=['foo']`\n",
     "    - Metadonnées: Il est important d’inclure des métadonnées à propos de votre projet. \n",
     "\n",
@@ -257,7 +257,7 @@
     }
    },
    "source": [
-    "Pour installer des packages, on vous conseille d’utiliser Pip (Python installing package). Cet outil cherche les packages sur le Python Package Index (PyPi). Les packages Python peuvent être compactés dans des archives tarball ou zip. Python utilise des formats de distribution. Actuellement, Python utilise egg mais ce format va etre peu à peu remplacé par wheel. Pour construire votre package, vous pouvez donc utiliser **wheel** et pour envoyer votre package sur Pypi, il faut utiliser l’outil **twine**"
+    "Pour installer des packages, on vous conseille d’utiliser `pip` (Python installing package). Cet outil cherche les packages sur le Python Package Index (PyPi). Les packages Python peuvent être compactés dans des archives tarball ou zip. Python utilise des formats de distribution. Actuellement, Python utilise egg mais ce format va etre peu à peu remplacé par wheel. Pour construire votre package, vous pouvez donc utiliser **[wheel](http://pythonwheels.com/)** et pour envoyer votre package sur Pypi, il faut utiliser l’outil **[twine](https://github.com/pypa/twine)**"
    ]
   },
   {
