--- a/python/session-2016-03-idf/3_objets/ellipsoides/enonce/synope_session_2016_03_idf-TP3.ipynb
+++ b/python/session-2016-03-idf/3_objets/ellipsoides/enonce/synope_session_2016_03_idf-TP3.ipynb
@@ -11,7 +11,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - TP3: Objets"
+    "# Ellipsoides - objets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1/6 : La définition de classes\n",
+    "\n",
+    "Créez une classe $Quaternion$, dans son propre fichier, avec les attributs suivants :\n",
+    "- $a$, $b$, $c$, $d$ : les quatres valeurs internes du quaternion,\n",
+    "- $init\\_xyz$ : initialise les valeurs b, c, et d ci-dessus à partir d'un point 3D x/y/z.\n",
+    "- $init\\_theta$ : initialise le quaternion de rotation à partir d'un angle \\theta et d'un tuple u_x/u_y/u_z.\n",
+    "- $init\\_theta\\_inv$ : initialise le quaternion de rotation à partir d'un angle \\theta et d'un tuple u_x/u_y/u_z."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## 2/6 : Les méthodes spéciales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## 3/6 : Les objets composés"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## 4/6 : L'héritage entre classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## 5/6 : Sauvegarde et reconstruction d'objets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## 6/6 : Quelques concepts avancés"
    ]
   },
   {
@@ -170,16 +238,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A propos des auteurs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "*Auteurs : Loic Gouarin et David Chamont. Document réalisé en 2016 dans le cadre d'une série de formations Python organisées par les réseaux LoOPS et PiCo en collaboration avec le pôle formation du SMUT CNRS.*"
+    "*Auteurs : Loic Gouarin, David Chamont, Dmitry Khvorostyanov. Document réalisé en 2016 dans le cadre d'une série de formations Python organisées par les réseaux LoOPS et PiCo en collaboration avec le pôle formation du SMUT CNRS.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +283,7 @@
        "div.text_cell_render{\n",
        "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
        "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
+       "    font-size: 140%;\n",
        "    width:100%;/*600px;*/\n",
        "    /*margin-left:auto;*/\n",
        "    /*margin-right:auto;*/\n",
@@ -243,7 +325,7 @@
        "    border-radius: 25px;\n",
        "    font-style: italic;\n",
        "    height:5%;\n",
-       "    width:15%;\n",
+       "    width:20%;\n",
        "    padding:5px;\n",
        "    text-align: center;\n",
        "}\n",
@@ -272,16 +354,28 @@
        "    border-radius: 10px;\n",
        "}\n",
        "\n",
-       "/*.reveal h1 {\n",
+       ".reveal h1 {\n",
+       "    font-size: 70px;\n",
        "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
+       "}\n",
+       "\n",
+       ".reveal h2 {\n",
+       "    font-size: 50px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h3 {\n",
+       "    font-size: 50px;\n",
+       "    \n",
+       "}\n",
+       "\n",
        "</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
