--- a/python/session-2016-03-idf/4_outils/ellipsoides/enonce/synope_session_2016_03_idf-TP4.ipynb
+++ b/python/session-2016-03-idf/4_outils/ellipsoides/enonce/synope_session_2016_03_idf-TP4.ipynb
@@ -44,6 +44,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 5\n",
+    "\n",
+    "Créez une fonction ```log``` permettant de configurer le logging de votre programme et retournant un objet ```logger```. Cette configuration permettra de sauver dans un fichier les evénements de niveau supérieur ou égal à **warning** et d'afficher dans la console les éléments à partir du niveau **debug**.\n",
+    "Dans votre script remplacez les ```print()``` par une utilisation de la fonctionnalité de logging."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 6\n",
+    "\n",
+    "Utilisez le module ```argparse``` pour founir en argument au lancement de votre scipt le nom du fichier dans lequel les logs vont être écrits et le niveau des logs qui seront enregistré."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -67,7 +86,7 @@
        "div.text_cell_render{\n",
        "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
        "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
+       "    font-size: 140%;\n",
        "    width:100%;/*600px;*/\n",
        "    /*margin-left:auto;*/\n",
        "    /*margin-right:auto;*/\n",
@@ -109,7 +128,7 @@
        "    border-radius: 25px;\n",
        "    font-style: italic;\n",
        "    height:5%;\n",
-       "    width:15%;\n",
+       "    width:20%;\n",
        "    padding:5px;\n",
        "    text-align: center;\n",
        "}\n",
@@ -138,9 +157,21 @@
        "    border-radius: 10px;\n",
        "}\n",
        "\n",
-       "/*.reveal h1 {\n",
+       ".reveal h1 {\n",
+       "    font-size: 70px;\n",
        "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
+       "}\n",
+       "\n",
+       ".reveal h2 {\n",
+       "    font-size: 50px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h3 {\n",
+       "    font-size: 50px;\n",
+       "    \n",
+       "}\n",
+       "\n",
        "</style>"
       ],
       "text/plain": [
@@ -178,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
